// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Block should render correctly 1`] = `
<div
  className="e1krcyn12 css-lc5qmv"
  onClick={null}
  style={Object {}}
/>
`;

exports[`Box should allow overriding of default styles 1`] = `
<div
  className="e1krcyn10 css-sd5hxs"
  style={
    Object {
      "color": "red",
    }
  }
/>
`;

exports[`Box should allow passing spacing scales 1`] = `
<div
  className="e1krcyn10 css-fnjpj6"
  style={Object {}}
/>
`;

exports[`Box should allow passing vector style values 1`] = `
<div
  className="e1krcyn10 css-8byqpd"
  style={Object {}}
/>
`;

exports[`Box should render correctly 1`] = `
<div
  className="e1krcyn10 css-2l1w6y"
  style={Object {}}
/>
`;

exports[`Flex should render correctly 1`] = `
<div
  className="e1krcyn11 css-1r7gzeu"
  onClick={null}
  style={Object {}}
/>
`;

exports[`Inline should render correctly 1`] = `
<span
  className="e1krcyn13 css-ilphoc"
  onClick={null}
  style={Object {}}
/>
`;

exports[`InlineFlex should render correctly 1`] = `
<span
  className="e1krcyn14 css-134c52"
  onClick={null}
  style={Object {}}
/>
`;
